Update dependencies and refactor path mappings in server and web examples
- Added `@elysiajs/eden` as a dependency in the server example's package.json and updated its version in pnpm-lock.yaml.
- Refactored TypeScript path mappings in both server and web examples to use `@se` for improved module resolution.
- Updated environment configurations to include a new API URL in the web example's .env files.
- Removed obsolete .env.local.example file to clean up the project structure.

--- a/apps/server-example/tsconfig.json
+++ b/apps/server-example/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"extends": "@packages/typescript-config/app.json",
 	"compilerOptions": {
-		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"]
+			"@se/*": ["./src/*"]
 		}
 	},
 	"include": ["src"],
