--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@elysiajs/bearer": "^1.4.1",
 		"@elysiajs/cors": "^1.4.0",
+		"@elysiajs/eden": "^1.4.1",
 		"@elysiajs/jwt": "^1.4.0",
 		"@elysiajs/openapi": "^1.4.11",
 		"@elysiajs/opentelemetry": "^1.4.0",
