--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -29,6 +29,7 @@
 		"@elysiajs/static": "^1.4.0",
 		"@packages/cluster": "workspace:*",
 		"@t3-oss/env-core": "^0.13.8",
+		"better-auth": "^1.3.27",
 		"drizzle-orm": "^0.44.6",
 		"elysia": "catalog:",
 		"jose": "^5.9.6",
