Refactor package dependencies and schema integration across examples
- Added new dependencies for `@packages/schemas`, replacing previous references to `@packages/events` in various job examples and modules.
- Updated the `pnpm-lock.yaml` to reflect the new package structure and ensure proper linking.
- Introduced new database schemas for posts and products in the server example, enhancing data management capabilities.
- Removed obsolete files related to the `@packages/events` package to streamline the project structure.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -28,9 +28,13 @@
 		"@elysiajs/opentelemetry": "^1.4.0",
 		"@elysiajs/static": "^1.4.0",
 		"@packages/cluster": "workspace:*",
+		"@packages/schemas": "workspace:*",
 		"@t3-oss/env-core": "^0.13.8",
+		"@zod/core": "^0.11.6",
 		"better-auth": "^1.3.27",
+		"decimal.js": "^10.6.0",
 		"drizzle-orm": "^0.44.6",
+		"drizzle-zod": "^0.8.3",
 		"elysia": "catalog:",
 		"jose": "^5.9.6",
 		"lodash-es": "^4.17.21",
