--- a/jobs/order-example/package.json
+++ b/jobs/order-example/package.json
@@ -17,7 +17,7 @@
 	},
 	"dependencies": {
 		"@packages/cluster": "workspace:*",
-		"@packages/events": "workspace:*",
+		"@packages/schemas": "workspace:*",
 		"amqp-connection-manager": "catalog:",
 		"amqplib": "catalog:",
 		"zod": "catalog:"
