Refactor ESLint and TypeScript configurations to unify package structure
- Updated import paths in ESLint and TypeScript configuration files to reference the new `@packages/config` structure.
- Removed obsolete ESLint and TypeScript configuration files from `@packages/eslint-config` and `@packages/typescript-config`.
- Ensured all applications and packages are aligned with the new configuration paths for improved maintainability.

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
 	"devDependencies": {
 		"@faker-js/faker": "^10.0.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-		"@packages/eslint-config": "workspace:*",
-		"@packages/typescript-config": "workspace:*",
+		"@packages/config": "workspace:*",
 		"eslint": "^9.36.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-nginx": "^1.0.3",
