--- a/apps/server-example/tsconfig.json
+++ b/apps/server-example/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@packages/typescript-config/app.json",
+	"extends": "@packages/config/typescript/app",
 	"compilerOptions": {
 		"paths": {
 			"@se/*": ["./src/*"]
