--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@packages/typescript-config/nextjs.json",
+	"extends": "@packages/config/typescript/nextjs",
 	"compilerOptions": {
 		"paths": {
 			"@/*": ["./src/*"],
