--- a/packages/cluster/tsconfig.json
+++ b/packages/cluster/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@packages/typescript-config/base.json",
+	"extends": "@packages/config/typescript/base",
 	"compilerOptions": {
 		"baseUrl": ".",
 	},
