--- a/packages/ui/tsconfig.lint.json
+++ b/packages/ui/tsconfig.lint.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@packages/typescript-config/react-library.json",
+	"extends": "@packages/config/typescript/react-library",
 	"compilerOptions": {
 		"outDir": "dist"
 	},
