Refactor project structure and enhance authentication management
- Commented out Keycloak and Redis services in docker-compose.yml for optional usage.
- Added new scripts for authentication migration and pushing in package.json.
- Updated environment variables in server and web examples to include AUTH_DATABASE_URL for Better Auth session validation.
- Refactored database initialization SQL to create auth_example database and user.
- Updated various package.json files to set version to 0.0.0 for consistency across examples.
- Improved error handling by updating error classes and integrating validation in the authentication module.
- Streamlined imports and removed obsolete files to enhance maintainability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 include:
   - infra/postgresql.yml
   - infra/rabbitmq.yml
-  - infra/keycloak.yml
-  - infra/redis.yml
+  # - infra/keycloak.yml
+  # - infra/redis.yml
   - infra/openfga.yml
 
 # Main application services can be defined here
