--- a/apps/server-example/.env.development
+++ b/apps/server-example/.env.development
@@ -2,7 +2,8 @@ NODE_ENV=development
 PORT=3101
 
 # Backend uses the SAME database as frontend for Better Auth session validation
-DATABASE_URL=postgresql://web_example:web_example_password@localhost/web_example
+DATABASE_URL=postgresql://server_example:server_example_password@localhost/server_example
+AUTH_DATABASE_URL=postgresql://auth_example:auth_example_password@localhost/auth_example
 
 API_CLIENT_BASE_URL=http://localhost:3001
 API_BASE_URL=http://localhost:3101
