--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "server-example",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"private": true,
 	"type": "module",
 	"module": "src/index.ts",
@@ -20,34 +20,34 @@
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@elysiajs/bearer": "^1.4.1",
-		"@elysiajs/cors": "^1.4.0",
-		"@elysiajs/eden": "^1.4.1",
-		"@elysiajs/jwt": "^1.4.0",
-		"@elysiajs/openapi": "^1.4.11",
-		"@elysiajs/opentelemetry": "^1.4.0",
-		"@elysiajs/static": "^1.4.0",
+		"@elysiajs/bearer": "catalog:",
+		"@elysiajs/cors": "catalog:",
+		"@elysiajs/eden": "catalog:",
+		"@elysiajs/jwt": "catalog:",
+		"@elysiajs/openapi": "catalog:",
+		"@elysiajs/opentelemetry": "catalog:",
+		"@elysiajs/static": "catalog:",
 		"@packages/cluster": "workspace:*",
 		"@packages/schemas": "workspace:*",
-		"@t3-oss/env-core": "^0.13.8",
-		"@zod/core": "^0.11.6",
-		"better-auth": "^1.3.27",
-		"decimal.js": "^10.6.0",
-		"drizzle-orm": "^0.44.6",
-		"drizzle-zod": "^0.8.3",
+		"@t3-oss/env-core": "catalog:",
+		"@zod/core": "catalog:",
+		"better-auth": "catalog:",
+		"decimal.js": "catalog:",
+		"drizzle-orm": "catalog:",
+		"drizzle-zod": "catalog:",
 		"elysia": "catalog:",
-		"jose": "^5.9.6",
-		"lodash-es": "^4.17.21",
-		"pg": "^8.16.3",
+		"jose": "catalog:",
+		"lodash-es": "catalog:",
+		"pg": "catalog:",
 		"zod": "catalog:"
 	},
 	"devDependencies": {
-		"@dotenvx/dotenvx": "^1.51.0",
+		"@dotenvx/dotenvx": "catalog:",
 		"@types/bun": "catalog:",
-		"@types/lodash-es": "^4.17.12",
-		"@types/pg": "^8.15.5",
-		"drizzle-kit": "^0.31.5",
-		"drizzle-seed": "^0.3.1",
-		"eslint-plugin-drizzle": "^0.2.3"
+		"@types/lodash-es": "catalog:",
+		"@types/pg": "catalog:",
+		"drizzle-kit": "catalog:",
+		"drizzle-seed": "catalog:",
+		"eslint-plugin-drizzle": "catalog:"
 	}
 }
