--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "web-example",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
 		"auth:generate": "dotenvx run --convention=nextjs -- pnpx @better-auth/cli@latest generate --output src/db/auth-schema.ts --config src/utils/auth.ts --yes",
+		"auth:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/auth.config.ts",
+		"auth:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/auth.config.ts",
 		"build": "next build",
 		"clean": "rm -rf .next .turbo node_modules",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
@@ -19,31 +21,31 @@
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@daveyplate/better-auth-ui": "^3.2.5",
-		"@elysiajs/eden": "^1.4.1",
+		"@daveyplate/better-auth-ui": "catalog:",
+		"@elysiajs/eden": "catalog:",
 		"@packages/ui": "workspace:*",
-		"@t3-oss/env-nextjs": "^0.13.8",
-		"@tanstack/react-query": "^5.90.2",
-		"@types/bun": "catalog:",
-		"better-auth": "^1.3.27",
-		"drizzle-orm": "^0.44.6",
+		"@t3-oss/env-nextjs": "catalog:",
+		"@tanstack/react-query": "catalog:",
+		"better-auth": "catalog:",
+		"drizzle-orm": "catalog:",
 		"elysia": "catalog:",
-		"lucide-react": "^0.544.0",
+		"lucide-react": "catalog:",
 		"next": "catalog:",
-		"next-themes": "^0.4.6",
-		"pg": "^8.16.3",
+		"pg": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
 		"zod": "catalog:"
 	},
 	"devDependencies": {
-		"@dotenvx/dotenvx": "^1.51.0",
-		"@types/node": "catalog:",
-		"@types/pg": "^8.15.5",
+		"@dotenvx/dotenvx": "catalog:",
+		"@tailwindcss/postcss": "catalog:",
+		"@types/bun": "catalog:",
+		"@types/pg": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
-		"drizzle-kit": "^0.31.5",
-		"drizzle-seed": "^0.3.1",
-		"eslint-plugin-drizzle": "^0.2.3"
+		"drizzle-kit": "catalog:",
+		"drizzle-seed": "catalog:",
+		"eslint-plugin-drizzle": "catalog:",
+		"tailwindcss": "catalog:"
 	}
 }
