--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,7 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.544.0",
+		"lucide-react": "catalog:",
 		"next-themes": "^0.4.6",
 		"react": "catalog:",
 		"react-dom": "catalog:",
@@ -31,11 +31,10 @@
 	},
 	"devDependencies": {
 		"@packages/config": "workspace:*",
-		"@tailwindcss/postcss": "^4.1.13",
+		"@tailwindcss/postcss": "catalog:",
 		"@turbo/gen": "^2.5.8",
-		"@types/node": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
-		"tailwindcss": "^4.1.13"
+		"tailwindcss": "catalog:"
 	}
 }
