--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,18 +5,45 @@ packages:
   - cron/*
 
 catalog:
+  '@daveyplate/better-auth-ui': 3.2.5
+  '@dotenvx/dotenvx': 1.51.0
+  '@elysiajs/bearer': 1.4.1
+  '@elysiajs/cors': 1.4.0
+  '@elysiajs/eden': 1.4.3
+  '@elysiajs/jwt': 1.4.0
+  '@elysiajs/openapi': 1.4.11
+  '@elysiajs/opentelemetry': 1.4.1
+  '@elysiajs/static': 1.4.0
+  '@t3-oss/env-core': 0.13.8
+  '@t3-oss/env-nextjs': 0.13.8
+  '@tailwindcss/postcss': 4.1.14
+  '@tanstack/react-query': 5.90.2
   '@types/amqplib': 0.10.7
-  '@types/bun': 1.2.23
-  '@types/node': 24.5.2
-  '@types/react': 19.2.0
-  '@types/react-dom': 19.2.0
+  '@types/bun': 1.3.0
+  '@types/lodash-es': 4.17.12
+  '@types/pg': 8.15.5
+  '@types/react': 19.2.2
+  '@types/react-dom': 19.2.1
+  '@zod/core': 0.11.6
+  'decimal.js': 10.6.0
   amqp-connection-manager: 5.0.0
   amqplib: 0.10.9
-  elysia: 1.4.9
+  better-auth: 1.3.27
+  drizzle-kit: 0.31.5
+  drizzle-orm: 0.44.6
+  drizzle-seed: 0.3.1
+  drizzle-zod: 0.8.3
+  elysia: 1.4.11
+  eslint-plugin-drizzle: 0.2.3
+  jose: 6.1.0
+  lodash-es: 4.17.21
+  lucide-react: 0.545.0
   next: 15.5.4
+  pg: 8.16.3
   react: 19.2.0
   react-dom: 19.2.0
-  zod: 4.1.11
+  tailwindcss: 4.1.14
+  zod: 4.1.12
 
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
