Enhance blog functionality and refactor post management
- Added blogController to server and integrated it into the API routes.
- Introduced a new blogs table schema with necessary fields for blog management.
- Updated posts schema to include a foreign key reference to the blogs table.
- Refactored post creation and update logic to remove authorId and streamline data handling.
- Enhanced post model to support querying with blog information.
- Updated pagination and query schemas to accommodate new blog relationships.

--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -4,8 +4,7 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		"./pagination": "./src/pagination/index.ts",
-		"./pagination/cursor": "./src/pagination/cursor.ts",
+		"./query": "./src/query/index.ts",
 		"./events": "./src/events/index.ts",
 		"./decimal": "./src/decimal/index.ts"
 	},
