Refactor blog and post controllers to enhance query validation and streamline authentication
- Commented out authentication middleware in blog and post controllers for optional usage.
- Improved post listing endpoint with enhanced query validation using Zod.
- Updated response models for post creation and updates to ensure consistency.
- Removed obsolete test code from post model to clean up the codebase.
- Added utility exports in schemas package for better modularity.

--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -6,7 +6,8 @@
 	"exports": {
 		"./query": "./src/query/index.ts",
 		"./events": "./src/events/index.ts",
-		"./decimal": "./src/decimal/index.ts"
+		"./decimal": "./src/decimal/index.ts",
+		"./utils": "./src/utils/index.ts"
 	},
 	"scripts": {
 		"clean": "rm -rf .turbo node_modules",
