Add drizzle-query-builder package and update post service to utilize it
- Added '@packages/drizzle-query-builder' to the pnpm-lock.yaml and package.json for improved query building capabilities.
- Updated the post service to import and use the createListQueryBuilder from the drizzle-query-builder package, enhancing query flexibility.
- Removed obsolete query builder files to streamline the codebase and improve maintainability.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -28,6 +28,7 @@
 		"@elysiajs/opentelemetry": "catalog:",
 		"@elysiajs/static": "catalog:",
 		"@packages/cluster": "workspace:*",
+		"@packages/drizzle-query-builder": "workspace:*",
 		"@packages/schemas": "workspace:*",
 		"@t3-oss/env-core": "catalog:",
 		"@zod/core": "catalog:",
