Update docker-compose and server-example configurations
- Added a name to the docker-compose file for better identification.
- Updated .gitignore in server-example to include migrations directory.
- Modified package.json in server-example to enhance test commands with dotenvx and bun for improved testing capabilities.
- Adjusted PostgreSQL volume path and healthcheck interval in postgresql.yml for better database management.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -16,7 +16,8 @@
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"start": "./dist/server",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "dotenvx run --env-file=.env.test -- bun test --concurrent",
+		"test:watch": "dotenvx run --env-file=.env.test -- bun test --watch --concurrent",
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
