Update dependencies and enhance server configuration
- Removed obsolete dependencies from pnpm-lock.yaml to streamline the project.
- Added 'croner' package to package.json for improved scheduling capabilities.
- Updated server.ts to include cronController for enhanced functionality in the server example.
- Modified index.ts to export cronController, integrating it into the module structure.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -48,6 +48,7 @@
 		"@types/bun": "catalog:",
 		"@types/lodash-es": "catalog:",
 		"@types/pg": "catalog:",
+		"croner": "^9.1.0",
 		"drizzle-kit": "catalog:",
 		"drizzle-seed": "catalog:",
 		"eslint-plugin-drizzle": "catalog:"
