Update dependencies and refactor cron module for improved functionality
- Added new dependencies including '@daveyplate/better-auth-ui', '@tanstack/react-query', and 'croner' to pnpm-lock.yaml and package.json for enhanced features.
- Refactored cron module to utilize '@packages/elysia-cron' and '@packages/utils/cron-patterns', improving code organization and maintainability.
- Removed obsolete schedule.ts and test.ts files to streamline the cron module.
- Updated model.ts and service.ts to reflect new import paths, enhancing clarity and structure.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -30,7 +30,9 @@
 		"@elysiajs/static": "catalog:",
 		"@packages/cluster": "workspace:*",
 		"@packages/drizzle-query-builder": "workspace:*",
+		"@packages/elysia-cron": "workspace:*",
 		"@packages/schemas": "workspace:*",
+		"@packages/utils": "workspace:*",
 		"@t3-oss/env-core": "catalog:",
 		"@zod/core": "catalog:",
 		"better-auth": "catalog:",
@@ -48,7 +50,6 @@
 		"@types/bun": "catalog:",
 		"@types/lodash-es": "catalog:",
 		"@types/pg": "catalog:",
-		"croner": "^9.1.0",
 		"drizzle-kit": "catalog:",
 		"drizzle-seed": "catalog:",
 		"eslint-plugin-drizzle": "catalog:"
