--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -44,6 +44,7 @@ catalog:
   react-dom: 19.2.0
   tailwindcss: 4.1.14
   zod: 4.1.12
+  croner: 9.1.0
 
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
