Update pnpm-lock.yaml and refactor post and product modules for improved functionality
- Updated pnpm-lock.yaml to include '@playwright/test@1.56.1' and adjusted dependencies for better compatibility.
- Refactored post service to utilize createListQueryBuilder for enhanced query capabilities.
- Modified product model to implement createPaginatedQuery and createPaginatedResponse for improved pagination handling.
- Cleaned up commented code in post controller and service for better readability.
- Removed obsolete test-api directory to streamline the project structure.

--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -16,8 +16,14 @@
 		"dev": "next dev --turbopack -p 3001",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
+		"postinstall": "playwright install --with-deps chromium",
 		"start": "next start -p 3001",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "dotenvx run --convention=nextjs -- playwright test --project=chromium",
+		"test:all": "dotenvx run --convention=nextjs -- playwright test",
+		"test:ui": "dotenvx run --convention=nextjs -- playwright test --ui --project=chromium",
+		"test:ui:all": "dotenvx run --convention=nextjs -- playwright test --ui",
+		"test:headed": "dotenvx run --convention=nextjs -- playwright test --project=chromium --headed",
+		"test:report": "playwright show-report",
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
@@ -38,6 +44,7 @@
 	},
 	"devDependencies": {
 		"@dotenvx/dotenvx": "catalog:",
+		"@playwright/test": "^1.48.0",
 		"@tailwindcss/postcss": "catalog:",
 		"@types/bun": "catalog:",
 		"@types/pg": "catalog:",
