--- a/apps/web-example/.env
+++ b/apps/web-example/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_APP_NAME=web-example
+
+DEFAULT_USER_EMAIL=test@example.com
+DEFAULT_USER_PASSWORD=test-password-123
+DEFAULT_USER_NAME="Test User"
