Update .gitignore, pnpm-lock.yaml, and Playwright configuration for improved testing setup
- Added 'apps/web-example/test/' to .gitignore to exclude test files from version control.
- Removed obsolete dependencies from pnpm-lock.yaml to streamline project structure.
- Refactored Playwright configuration to enhance test setup, including the addition of storage state management and output directory for test results.

--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -8,7 +8,7 @@
 		"auth:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/auth.config.ts",
 		"auth:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/auth.config.ts",
 		"build": "next build",
-		"clean": "rm -rf .next .turbo node_modules",
+		"clean": "rm -rf .next .turbo node_modules test",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
 		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/drizzle.config.ts",
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
