Update Playwright configuration and dependencies for improved testing setup
- Integrated base Playwright configuration to streamline test setup.
- Added '@playwright/test' dependency in package.json and updated pnpm-lock.yaml.
- Enhanced README to include Playwright test configurations.

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -11,7 +11,8 @@
 		"./eslint/base": "./eslint/base.js",
 		"./eslint/next": "./eslint/next.js",
 		"./eslint/react-internal": "./eslint/react-internal.js",
-		"./eslint/react": "./eslint/react.js"
+		"./eslint/react": "./eslint/react.js",
+		"./playwright/base": "./playwright/base.ts"
 	},
 	"scripts": {
 		"clean": "rm -rf .turbo node_modules"
@@ -19,6 +20,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.37.0",
 		"@next/eslint-plugin-next": "^15.5.4",
+		"@playwright/test": "^1.48.0",
 		"@tanstack/eslint-plugin-query": "^5.91.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-only-warn": "^1.1.0",
