--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"db:push": "turbo run db:push",
 		"db:seed": "turbo run db:seed",
 		"dev": "turbo run dev",
-		"format": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth-schema.ts\"",
-		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth-schema.ts\"",
+		"format": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth/drizzle.schema.ts\"",
+		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth/drizzle.schema.ts\"",
 		"lint": "turbo run lint",
 		"start": "turbo run start",
 		"test": "turbo run test",
