--- a/turbo.json
+++ b/turbo.json
@@ -32,12 +32,12 @@
 			"cache": false
 		},
 		"auth:generate": {
-			"inputs": ["src/utils/auth.ts", "src/db/auth-schema.ts", ".env*", "!.env*.example"],
-			"outputs": ["src/db/auth-schema.ts"]
+			"inputs": ["src/auth/index.ts", "src/auth/drizzle.schema.ts", ".env*", "!.env*.example"],
+			"outputs": ["src/auth/drizzle.schema.ts"]
 		},
 		"auth:migrate": {
 			"dependsOn": ["^auth:generate"],
-			"inputs": ["src/db/auth-schema.ts", "src/scripts/auth.config.ts", ".env*", "!.env*.example"]
+			"inputs": ["src/auth/drizzle.schema.ts", "src/auth/drizzle.config.ts", ".env*", "!.env*.example"]
 		},
 		"auth:push": {
 			"cache": false
