Update dependencies and improve project structure
- Upgraded various dependencies in package.json and pnpm-lock.yaml, including '@faker-js/faker', 'eslint', 'knip', and '@playwright/test'.
- Updated '@daveyplate/better-auth-ui' and other packages in pnpm-workspace.yaml for better compatibility and features.
- Refactored scripts in server-example and web-example package.json files to enhance build and clean processes.
- Improved type safety in auth module by adding BetterAuthPlugin to plugins array.
- Streamlined ESLint configuration and updated related dependencies for better linting support.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile ./dist/server src/index.ts",
 		"build:linux": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile ./dist/server src/index.ts",
-		"clean": "rm -rf dist .turbo node_modules",
+		"clean": "rm -rf dist .turbo node_modules migrations",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
 		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/drizzle.config.ts",
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
