--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -13,7 +13,7 @@
 		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/drizzle.config.ts",
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
 		"db:seed": "dotenvx run --convention=nextjs -- bun run src/scripts/seed.ts",
-		"dev": "next dev --turbopack -p 3001",
+		"dev": "next dev -p 3001",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"postinstall": "playwright install --with-deps chromium",
