Update project configurations and clean scripts for improved testing setup
- Modified package.json clean scripts to remove the .test directory along with other build artifacts.
- Updated turbo.json to adjust test task inputs and outputs, ensuring proper test file management.
- Refactored Playwright configuration to utilize the .test directory for storage state and report outputs.
- Cleaned up .gitignore files across applications to include the .test directory for better version control management.

--- a/turbo.json
+++ b/turbo.json
@@ -5,8 +5,8 @@
 	"tasks": {
 		"test": {
 			"dependsOn": ["^test"],
-			"inputs": ["src/**/*.ts", "src/**/*.tsx", "test/**/*.ts"],
-			"outputs": ["coverage/**"]
+			"inputs": ["src/**/*.ts", "src/**/*.tsx"],
+			"outputs": [".test/**"]
 		},
 		"dev": {
 			"cache": false,
@@ -26,7 +26,7 @@
 			"inputs": ["src/**", "eslint.config.js", "tsconfig.json", "package.json"]
 		},
 		"type:check": {
-			"inputs": ["src/**/*.ts", "src/**/*.tsx", "test/**/*.ts", "tsconfig.json", "package.json"]
+			"inputs": ["src/**/*.ts", "src/**/*.tsx", "*.ts", "tsconfig.json", "package.json"]
 		},
 		"clean": {
 			"cache": false
