--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile ./dist/server src/index.ts",
 		"build:linux": "bun build --compile --minify-whitespace --minify-syntax --target bun-linux-x64 --outfile ./dist/server src/index.ts",
-		"clean": "rm -rf dist .turbo node_modules migrations",
+		"clean": "rm -rf dist .turbo node_modules migrations .test",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
 		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/drizzle.config.ts",
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
@@ -16,8 +16,8 @@
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"start": "./dist/server",
-		"test": "dotenvx run --env-file=.env.test -- bun test --concurrent",
-		"test:watch": "dotenvx run --env-file=.env.test -- bun test --watch --concurrent",
+		"test": "mkdir -p .test && bun test --concurrent",
+		"test:watch": "mkdir -p .test && bun test --watch --concurrent",
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
