--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -8,7 +8,7 @@
 		"auth:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/auth/drizzle.config.ts",
 		"auth:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/auth/drizzle.config.ts",
 		"build": "next build",
-		"clean": "rm -rf .next .turbo node_modules test",
+		"clean": "rm -rf .next .turbo node_modules .test",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
 		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/drizzle.config.ts",
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
