--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"auth:migrate": "turbo run auth:migrate",
 		"auth:push": "turbo run auth:push",
 		"build": "turbo run build",
-		"clean": "turbo run clean && rm -rf .turbo node_modules",
+		"clean": "turbo run clean && rm -rf .turbo node_modules .test",
 		"db:generate": "turbo run db:generate",
 		"db:migrate": "turbo run db:migrate",
 		"db:push": "turbo run db:push",
