--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# Dependencies & caches
 node_modules
-.pnp
-.pnp.js
+.turbo
 
 # Local env files
 .env.local
 .env.*.local
 
-# Testing
-coverage
-apps/web-example/test/
-
-# Turbo
-.turbo
-
-# Vercel
-.vercel
-
-# Build Outputs
+# Build artifacts
 .next/
-out/
-build
-dist
+dist/
+.migrations/
 
+# Test artifacts
+.test/
 
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Logs
+pnpm-debug.log*
 
 # Misc
 .DS_Store
