Enhance environment configuration and streamline project scripts
- Updated turbo.json to include additional input files for auth and db tasks, improving build accuracy.
- Removed NODE_ENV validation from env.ts and server.ts, replacing it with process.env checks for consistency.
- Simplified .env.development by removing unnecessary NODE_ENV declaration.
- Refactored package.json scripts in both server-example and web-example to standardize test execution with NODE_ENV settings.
- Cleaned up imports in drizzle.schema.ts for better readability and consistency.

--- a/apps/server-example/package.json
+++ b/apps/server-example/package.json
@@ -13,6 +13,7 @@
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
 		"db:seed": "dotenvx run --convention=nextjs -- bun run src/scripts/seed.ts",
 		"dev": "bun run --watch src/index.ts",
+		"dev:test": "NODE_ENV=test dotenvx run --convention=nextjs -- bun run --watch src/index.ts",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"start": "./dist/server",
