--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -5,25 +5,22 @@
 	"type": "module",
 	"scripts": {
 		"auth:generate": "dotenvx run --convention=nextjs -- pnpx @better-auth/cli@latest generate --output src/auth/drizzle.schema.ts --config src/auth/index.ts --yes",
-		"auth:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/auth/drizzle.config.ts",
-		"auth:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/auth/drizzle.config.ts",
 		"build": "next build",
 		"clean": "rm -rf .next .turbo node_modules .test",
-		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/scripts/drizzle.config.ts",
-		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/scripts/drizzle.config.ts",
-		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/scripts/drizzle.config.ts",
-		"db:seed": "dotenvx run --convention=nextjs -- bun run src/scripts/seed.ts",
+		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/auth/drizzle.config.ts",
+		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/auth/drizzle.config.ts",
+		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/auth/drizzle.config.ts",
 		"dev": "next dev -p 3001",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"postinstall": "playwright install --with-deps chromium",
 		"start": "next start -p 3001",
-		"test": "dotenvx run --convention=nextjs -- playwright test --project=chromium",
-		"test:all": "dotenvx run --convention=nextjs -- playwright test",
-		"test:ui": "dotenvx run --convention=nextjs -- playwright test --ui --project=chromium",
-		"test:ui:all": "dotenvx run --convention=nextjs -- playwright test --ui",
-		"test:headed": "dotenvx run --convention=nextjs -- playwright test --project=chromium --headed",
-		"test:report": "playwright show-report",
+		"test": "NODE_ENV=test dotenvx run --convention=nextjs -- playwright test --project=chromium",
+		"test:all": "NODE_ENV=test dotenvx run --convention=nextjs -- playwright test",
+		"test:ui": "NODE_ENV=test dotenvx run --convention=nextjs -- playwright test --ui --project=chromium",
+		"test:ui:all": "NODE_ENV=test dotenvx run --convention=nextjs -- playwright test --ui",
+		"test:headed": "NODE_ENV=test dotenvx run --convention=nextjs -- playwright test --project=chromium --headed",
+		"test:report": "NODE_ENV=test playwright show-report",
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
