Update UI package dependencies and improve README instructions
- Added '@radix-ui/react-label' and '@radix-ui/react-separator' dependencies to the UI package for enhanced component functionality.
- Updated README instructions for adding components to clarify usage and specify the correct command format.
- Modified TypeScript configuration in the web-example app to include path mapping for the UI package, improving module resolution.

--- a/apps/web-example/tsconfig.json
+++ b/apps/web-example/tsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"paths": {
 			"@/*": ["./src/*"],
+			"@packages/ui/*": ["../../packages/ui/src/*"],
 			"@se": ["../server-example/src/server"],
 			"@se/*": ["../server-example/src/*"]
 		}
