--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"auth:generate": "dotenvx run --convention=nextjs -- pnpx @better-auth/cli@latest generate --output src/auth/drizzle.schema.ts --config src/auth/index.ts --yes",
 		"build": "next build",
-		"clean": "rm -rf .next .turbo node_modules .test",
+		"clean": "rm -rf .next .turbo node_modules .test .migrations",
 		"db:generate": "dotenvx run --convention=nextjs -- drizzle-kit generate --config=src/auth/drizzle.config.ts",
 		"db:migrate": "dotenvx run --convention=nextjs -- drizzle-kit migrate --config=src/auth/drizzle.config.ts",
 		"db:push": "dotenvx run --convention=nextjs -- drizzle-kit push --config=src/auth/drizzle.config.ts",
