Update project dependencies and improve formatting scripts
- Updated dependencies in package.json, including '@types/node', 'eslint', and 'knip' for better compatibility and performance.
- Simplified formatting scripts by removing specific ignore patterns, ensuring a more consistent code style across the project.
- Enhanced testing documentation in TESTING.md for clearer instructions on environment setup.
- Refactored server.ts and schema.ts for improved readability and consistency in code structure.

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"db:push": "turbo run db:push",
 		"db:seed": "turbo run db:seed",
 		"dev": "turbo run dev",
-		"format": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth/drizzle.schema.ts\"",
-		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore --ignore-pattern \"**/auth/drizzle.schema.ts\"",
+		"format": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
+		"format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
 		"lint": "turbo run lint",
 		"start": "turbo run start",
 		"test": "turbo run test",
@@ -28,9 +28,9 @@
 		"@faker-js/faker": "^10.1.0",
 		"@ianvs/prettier-plugin-sort-imports": "^4.7.0",
 		"@packages/config": "workspace:*",
-		"@types/node": "^24.9.2",
-		"eslint": "^9.39.0",
-		"knip": "^5.66.4",
+		"@types/node": "^24.10.0",
+		"eslint": "^9.39.1",
+		"knip": "^5.67.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-nginx": "^1.0.3",
 		"prettier-plugin-packagejson": "^2.5.19",
