Update dependencies and configuration for improved compatibility and functionality
- Updated package versions in pnpm-lock.yaml and pnpm-workspace.yaml for various packages, including '@daveyplate/better-auth-ui', '@dotenvx/dotenvx', and '@elysiajs/static'.
- Added 'babel-plugin-react-compiler' to package dependencies for enhanced React support.
- Modified next.config.ts to enable the React compiler for better performance.
- Adjusted package.json files in multiple projects to use 'catalog:' for dependency management, ensuring consistency across the workspace.

--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -41,12 +41,13 @@
 	},
 	"devDependencies": {
 		"@dotenvx/dotenvx": "catalog:",
-		"@playwright/test": "^1.56.1",
+		"@playwright/test": "catalog:",
 		"@tailwindcss/postcss": "catalog:",
 		"@types/bun": "catalog:",
 		"@types/pg": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
+		"babel-plugin-react-compiler": "catalog:",
 		"drizzle-kit": "catalog:",
 		"drizzle-seed": "catalog:",
 		"eslint-plugin-drizzle": "catalog:",
