--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -20,7 +20,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
 		"@next/eslint-plugin-next": "^16.0.1",
-		"@playwright/test": "^1.56.1",
+		"@playwright/test": "catalog:",
 		"@tanstack/eslint-plugin-query": "^5.91.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-only-warn": "^1.1.0",
