--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,46 +5,48 @@ packages:
   - cron/*
 
 catalog:
-  '@daveyplate/better-auth-ui': 3.2.7
-  '@dotenvx/dotenvx': 1.51.0
-  '@elysiajs/bearer': 1.4.1
-  '@elysiajs/cors': 1.4.0
-  '@elysiajs/eden': 1.4.4
-  '@elysiajs/jwt': 1.4.0
-  '@elysiajs/openapi': 1.4.11
-  '@elysiajs/opentelemetry': 1.4.6
-  '@elysiajs/static': 1.4.5
-  '@t3-oss/env-core': 0.13.8
-  '@t3-oss/env-nextjs': 0.13.8
-  '@tailwindcss/postcss': 4.1.16
-  '@tanstack/react-query': 5.90.6
-  '@types/amqplib': 0.10.8
-  '@types/bun': 1.3.1
-  '@types/lodash-es': 4.17.12
-  '@types/pg': 8.15.6
-  '@types/react': 19.2.2
-  '@types/react-dom': 19.2.2
-  '@zod/core': 0.11.6
-  amqp-connection-manager: 5.0.0
-  amqplib: 0.10.9
-  better-auth: 1.3.34
-  croner: 9.1.0
-  decimal.js: 10.6.0
-  drizzle-kit: 0.31.6
-  drizzle-orm: 0.44.7
-  drizzle-seed: 0.3.1
-  drizzle-zod: 0.8.3
-  elysia: 1.4.13
-  eslint-plugin-drizzle: 0.2.3
-  jose: 6.1.0
-  lodash-es: 4.17.21
-  lucide-react: 0.552.0
-  next: 16.0.1
-  pg: 8.16.3
-  react: 19.2.0
-  react-dom: 19.2.0
-  tailwindcss: 4.1.16
-  zod: 4.1.12
+  '@daveyplate/better-auth-ui': ^3.2.8
+  '@dotenvx/dotenvx': ^1.51.1
+  '@elysiajs/bearer': ^1.4.1
+  '@elysiajs/cors': ^1.4.0
+  '@elysiajs/eden': ^1.4.4
+  '@elysiajs/jwt': ^1.4.0
+  '@elysiajs/openapi': ^1.4.11
+  '@elysiajs/opentelemetry': ^1.4.6
+  '@elysiajs/static': ^1.4.6
+  '@playwright/test': ^1.56.1,
+  '@t3-oss/env-core': ^0.13.8
+  '@t3-oss/env-nextjs': ^0.13.8
+  '@tailwindcss/postcss': ^4.1.16
+  '@tanstack/react-query': ^5.90.6
+  '@types/amqplib': ^0.10.8
+  '@types/bun': ^1.3.1
+  '@types/lodash-es': ^4.17.12
+  '@types/pg': ^8.15.6
+  '@types/react': ^19.2.2
+  '@types/react-dom': ^19.2.2
+  '@zod/core': ^0.11.6
+  amqp-connection-manager: ^5.0.0
+  amqplib: ^0.10.9
+  babel-plugin-react-compiler: ^1.0.0
+  better-auth: ^1.3.34
+  croner: ^9.1.0
+  decimal.js: ^10.6.0
+  drizzle-kit: ^0.31.6
+  drizzle-orm: ^0.44.7
+  drizzle-seed: ^0.3.1
+  drizzle-zod: ^0.8.3
+  elysia: ^1.4.15
+  eslint-plugin-drizzle: ^0.2.3
+  jose: ^6.1.0
+  lodash-es: ^4.17.21
+  lucide-react: ^0.552.0
+  next: ^16.0.1
+  pg: ^8.16.3
+  react: ^19.2.0
+  react-dom: ^19.2.0
+  tailwindcss: ^4.1.16
+  zod: ^4.1.12
 
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
