--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,8 @@
 		"./postcss.config": "./postcss.config.mjs",
 		"./lib/*": "./src/lib/*.ts",
 		"./components/*": "./src/components/*.tsx",
-		"./hooks/*": "./src/hooks/*.ts"
+		"./hooks/*": "./src/hooks/*.ts",
+		"./form/*": "./src/form/*.tsx"
 	},
 	"scripts": {
 		"clean": "rm -rf .turbo node_modules",
@@ -17,9 +18,12 @@
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@tanstack/react-form": "^1.23.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "catalog:",
