--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,7 +14,7 @@ catalog:
   '@elysiajs/openapi': ^1.4.11
   '@elysiajs/opentelemetry': ^1.4.6
   '@elysiajs/static': ^1.4.6
-  '@playwright/test': ^1.56.1,
+  '@playwright/test': ^1.56.1
   '@t3-oss/env-core': ^0.13.8
   '@t3-oss/env-nextjs': ^0.13.8
   '@tailwindcss/postcss': ^4.1.16
