Update dependencies and enhance project structure for improved functionality
- Added new dependencies including '@radix-ui/react-slot', '@tanstack/react-table', and 'nuqs' to pnpm-lock.yaml and pnpm-workspace.yaml for better component support and functionality.
- Updated package.json in the web-example app to include the new '@packages/table_v1' dependency, ensuring proper module resolution.
- Modified TypeScript configuration to include path mapping for the new table package, enhancing development experience.
- Refactored layout component to integrate 'NuqsAdapter' for improved state management and UI consistency.

--- a/apps/web-example/package.json
+++ b/apps/web-example/package.json
@@ -26,14 +26,17 @@
 	"dependencies": {
 		"@daveyplate/better-auth-ui": "catalog:",
 		"@elysiajs/eden": "catalog:",
+		"@packages/table_v1": "workspace:*",
 		"@packages/ui": "workspace:*",
 		"@t3-oss/env-nextjs": "catalog:",
 		"@tanstack/react-query": "catalog:",
+		"@tanstack/react-table": "catalog:",
 		"better-auth": "catalog:",
 		"drizzle-orm": "catalog:",
 		"elysia": "catalog:",
 		"lucide-react": "catalog:",
 		"next": "catalog:",
+		"nuqs": "catalog:",
 		"pg": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
