--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,10 +15,12 @@ catalog:
   '@elysiajs/opentelemetry': ^1.4.6
   '@elysiajs/static': ^1.4.6
   '@playwright/test': ^1.56.1
+  '@radix-ui/react-slot': ^1.2.4
   '@t3-oss/env-core': ^0.13.8
   '@t3-oss/env-nextjs': ^0.13.8
   '@tailwindcss/postcss': ^4.1.16
   '@tanstack/react-query': ^5.90.6
+  '@tanstack/react-table': 8.21.3
   '@types/amqplib': ^0.10.8
   '@types/bun': ^1.3.1
   '@types/lodash-es': ^4.17.12
@@ -42,6 +44,7 @@ catalog:
   lodash-es: ^4.17.21
   lucide-react: ^0.552.0
   next: ^16.0.1
+  nuqs: ^2.7.2
   pg: ^8.16.3
   react: ^19.2.0
   react-dom: ^19.2.0
