--- a/packages/table_v1/package.json
+++ b/packages/table_v1/package.json
@@ -18,29 +18,24 @@
 		"type:check": "tsc --noEmit"
 	},
 	"dependencies": {
-		"@dnd-kit/core": "^6.3.1",
-		"@dnd-kit/modifiers": "^9.0.0",
-		"@dnd-kit/sortable": "^10.0.0",
-		"@dnd-kit/utilities": "^3.2.2",
+		"@dnd-kit/core": "catalog:",
+		"@dnd-kit/modifiers": "catalog:",
+		"@dnd-kit/sortable": "catalog:",
+		"@dnd-kit/utilities": "catalog:",
 		"@packages/ui": "workspace:*",
 		"@packages/utils": "workspace:*",
 		"@radix-ui/react-slot": "catalog:",
 		"@tanstack/react-table": "catalog:",
-		"@tanstack/react-virtual": "^3.13.12",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.1.1",
-		"date-fns": "^4.1.0",
+		"class-variance-authority": "catalog:",
 		"lucide-react": "catalog:",
-		"motion": "^12.23.24",
-		"nanoid": "^5.1.6",
+		"motion": "catalog:",
+		"nanoid": "catalog:",
 		"nuqs": "catalog:",
 		"react": "catalog:",
-		"react-day-picker": "^9.11.1",
+		"react-day-picker": "catalog:",
 		"react-dom": "catalog:",
-		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "catalog:",
-		"usehooks-ts": "^3.1.1",
+		"usehooks-ts": "catalog:",
 		"zod": "catalog:"
 	},
 	"devDependencies": {
@@ -50,6 +45,7 @@
 		"@types/react-dom": "catalog:"
 	},
 	"peerDependencies": {
+		"@tanstack/react-table": "catalog:",
 		"nuqs": "catalog:"
 	}
 }
