--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,13 +30,13 @@
 		"@radix-ui/react-slot": "catalog:",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-form": "^1.23.8",
-		"class-variance-authority": "^0.7.1",
+		"class-variance-authority": "catalog:",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"lucide-react": "catalog:",
 		"next-themes": "^0.4.6",
 		"react": "catalog:",
-		"react-day-picker": "^9.11.1",
+		"react-day-picker": "catalog:",
 		"react-dom": "catalog:",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
